# apps/server/src/routes/mod.rs
@@ -8,6 +8,7 @@ pub mod issues;
 pub mod logs;
 pub mod members;
 pub mod projects;
+pub mod releases;
 pub mod sessions;
 pub mod sourcemaps;
 pub mod storage;
